<?xml version="1.0" encoding="utf-8"?><layout>
    <data>
        <variable
            name="isDataInserted"
            type="boolean" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FirstFragment">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/textview_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_first_fragment"
            app:layout_constraintBottom_toTopOf="@id/buttonInsertMediaData"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonInsertMediaData"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/insert_files_to_db"

            android:textAllCaps="false"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/navigate_to_exo_player_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textview_first"
            app:layout_constraintTop_toTopOf="@+id/navigate_to_exo_player_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/navigate_to_exo_player_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:enabled="@{isDataInserted}"
            android:layout_marginHorizontal="24dp"
            android:text="@string/move_to_player_fragment"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonInsertMediaData"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
