<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <variable
            name="isDownloadAvailable"
            type="boolean" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".exoplayer.ExoPlayerFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/activity_vertical_margin">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_terms_and_condition"
                style="@style/AgricOsPrimaryText_HeadingText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/play_terms_and_condition"
                android:textColor="@color/BG_blue_darker"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_terms_and_condition_desc"
                style="@style/AgricOsSecondaryText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="5dp"
                android:text="@string/terms_and_condition_desc"
                android:textColor="@color/BG_blue_darker"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_terms_and_condition" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:id="@+id/spinner_audio_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_terms_and_condition_desc">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:inputType="none"
                    android:text="English"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/download"
                android:visibility="@{isDownloadAvailable? View.VISIBLE: View.GONE}"
                style="@style/AgricOsPrimaryButton"
                app:icon="@android:drawable/stat_sys_download"
                android:backgroundTint="@color/BG_green_agricOS"
                app:strokeColor="@color/black"
                app:strokeWidth="1dp"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="@+id/spinner_audio_filter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/spinner_audio_filter" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:cardCornerRadius="16dp"
                app:layout_constraintVertical_bias="0.1"
                app:cardElevation="3dp"
                app:contentPadding="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.25"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_audio_filter"
                app:strokeColor="@color/BG_gray"
                app:strokeWidth="1dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/seekBarLayout" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/seekBarLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.media3.ui.PlayerView
                            android:id="@+id/video_view"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:default_artwork="@drawable/babban_gona"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/next_btn"
                style="@style/AgricOsSecondaryButtonFO"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintVertical_bias="0.2"
                android:height="@dimen/height_primary_button"
                android:text="@string/next"
                app:cornerRadius="@dimen/corner_radius_standard"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_view"
                app:strokeColor="@color/BG_gray"
                app:strokeWidth="@dimen/standard_stroke_width" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
